row/row0mysql.c
@@ -625,6 +625,7 @@ row_create_prebuilt(
 
 	prebuilt->clust_ref = ref;
 
+	prebuilt->autoinc_error = 0;
 	prebuilt->autoinc_offset = 0;
 
 	/* Default to 1, we will set the actual value later in 
